--- a/index.html
+++ b/index.html
@@ -5,26 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoom</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
     <!-- start main content -->
     <main>
-        <div class="main-container">
-            c
+        <div class="main-container flex">
+            <div class="up-icons">
+                <span class="View">Speaker View</span>
+                <span class="expand">ciao</span>
+            </div>
+            <div class="card-container flex">
+                <div class="card"><img src="" alt=""></div> 
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div> 
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+                <div class="card"></div>   
+
+            </div>
         </div>
     </main>
     <!-- end main content -->
 
     <!-- start footer -->
     <footer>
-        <div class="tools-container">
-            c
+        <div class="tools-container flex">
+            <div class="left-tools flex">
+                <div>mute</div>   
+                <div>tenda</div>
+                <div>video</div>   
+                <div>tenda</div>                 
+            </div>
+            <div class="middle-tools flex">
+                <div>mute</div>   
+                <div>tenda</div>
+                <div>video</div>   
+                <div>tenda</div>
+                <div>mute</div>   
+                <div>tenda</div>
+                <div>video</div>   
+                <div>tenda</div>
+                <div>tenda</div>                
+            </div>
+            <div class="right-tools flex">
+                <div>terza barra</div>terza barra
+            </div>
         </div>
     </footer>
     <!-- end footer -->
 
-
-    
 </body>
 </html>
