icons-not-working

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <main>
         <div class="main-container flex">
             <div class="up-icons">
-                <span class="View">Speaker View</span>
-                <span class="expand">ciao</span>
+                <i class="fa-thin fa-objects-column">Speaker View</i>
+                <i class="fa-solid fa-arrows-maximize"></i>
             </div>
             <div class="card-container flex">
-                <div class="card"><img src="" alt=""></div> 
+                <div class="card">
+                    <img src="./img/dog.jpg" alt="">                
+                    <span>Pinco Pallino</span>
+                </div> 
                 <div class="card"></div>   
                 <div class="card"></div>   
                 <div class="card"></div>   
@@ -72,7 +75,7 @@
                 <div>tenda</div>                
             </div>
             <div class="right-tools flex">
-                <div>terza barra</div>terza barra
+                <div>terza barra</div>
             </div>
         </div>
     </footer>
