--- a/index.html
+++ b/index.html
@@ -13,41 +13,94 @@
     <main>
         <div class="main-container flex">
             <div class="up-icons">
-                <i class="fa-thin fa-objects-column">Speaker View</i>
-                <i class="fa-solid fa-arrows-maximize"></i>
+                <span><i class="fa-solid fa-table-cells"></i> Speaker view</span>
+                <span><i class="fa-solid fa-arrows-up-down-left-right"></i></span>
             </div>
             <div class="card-container flex">
                 <div class="card">
-                    <img src="./img/dog.jpg" alt="">                
-                    <span>Pinco Pallino</span>
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
                 </div> 
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div> 
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
-                <div class="card"></div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div> 
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
+                <div class="card">
+                    <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
+                </div>   
 
             </div>
         </div>
@@ -58,10 +111,10 @@
     <footer>
         <div class="tools-container flex">
             <div class="left-tools flex">
-                <div>mute</div>   
-                <div>tenda</div>
-                <div>video</div>   
-                <div>tenda</div>                 
+                <div><i class="fa-solid fa-microphone"></i> mute</div>   
+                <div><i class="fa-solid fa-angle-up"></i></div>
+                <div><i class="fa-solid fa-video"></i></div>   
+                <div><i class="fa-solid fa-angle-up"></i></div>                 
             </div>
             <div class="middle-tools flex">
                 <div>mute</div>   
@@ -75,7 +128,7 @@
                 <div>tenda</div>                
             </div>
             <div class="right-tools flex">
-                <div>terza barra</div>
+                <div>End Meeting</div>
             </div>
         </div>
     </footer>
