--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <!-- start main content -->
     <main>
         <div class="main-container flex">
+            <!-- top icons -->
             <div class="up-icons">
                 <span><i class="fa-solid fa-table-cells"></i> Speaker view</span>
                 <span><i class="fa-solid fa-arrows-up-down-left-right"></i></span>
             </div>
+
+            <!-- users -->
             <div class="card-container flex">
                 <div class="card">
                     <span><i class="fa-solid fa-microphone-slash"></i>Pinco Pallino</span>
@@ -110,23 +113,61 @@
     <!-- start footer -->
     <footer>
         <div class="tools-container flex">
+
             <div class="left-tools flex">
-                <div><i class="fa-solid fa-microphone"></i> mute</div>   
-                <div><i class="fa-solid fa-angle-up"></i></div>
-                <div><i class="fa-solid fa-video"></i></div>   
-                <div><i class="fa-solid fa-angle-up"></i></div>                 
+                <div><i class="fa-solid fa-microphone"></i>
+                    <div class="name-tools">Mute</div>
+                </div>   
+                <div class="angle-up">
+                    <i class="fa-solid fa-angle-up"></i>
+                </div>
+                <div>
+                    <i class="fa-solid fa-video"></i>
+                    <div class="name-tools">Stop Video</div>                    
+                </div>   
+                <div class="angle-up">
+                    <i class="fa-solid fa-angle-up"></i>
+                </div>                 
             </div>
+
             <div class="middle-tools flex">
-                <div>mute</div>   
-                <div>tenda</div>
-                <div>video</div>   
-                <div>tenda</div>
-                <div>mute</div>   
-                <div>tenda</div>
-                <div>video</div>   
-                <div>tenda</div>
-                <div>tenda</div>                
+                <div>
+                    <i class="fa-solid fa-user-plus"></i>
+                    <div class="name-tools">Invite</div>
+                </div>   
+                <div>
+                    <i class="fa-solid fa-user-group"></i>
+                    <div class="name-tools">Manage Partecipants</div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-chart-column"></i>
+                    <div class="name-tools">Pollings</div>
+                </div>   
+                <div>
+                    <i class="fa-solid fa-share-from-square"></i>
+                    <div class="name-tools">Share Screen</div>
+                </div>
+                <div class="angle-up">
+                    <i class="fa-solid fa-angle-up"></i>
+                </div>   
+                <div>
+                    <i class="fa-solid fa-comment"></i>
+                    <div class="name-tools">Chat</div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-record-vinyl"></i>
+                    <div class="name-tools">Record</div>
+                </div>   
+                <div>
+                    <i class="fa-solid fa-table-cells-large"></i>
+                    <div class="name-tools">Breakout Rooms</div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-ellipsis"></i>
+                    <div class="name-tools">More</div>
+                </div>                
             </div>
+
             <div class="right-tools flex">
                 <div>End Meeting</div>
             </div>
